RESOLVED FIXED 118492
[CSS Shapes] Floats with shape-outside aren't painting in the correct order
https://bugs.webkit.org/show_bug.cgi?id=118492
Summary [CSS Shapes] Floats with shape-outside aren't painting in the correct order
Alan Stearns
Reported 2013-07-08 17:06:29 PDT
Created attachment 206283 [details] reftest If you have a left float followed by inline content, and the inline content overlaps the float, the inline content should paint on top. If you add a shape-outside to the float, the float paints on top.
Attachments
reftest (995 bytes, application/zip)
2013-07-08 17:06 PDT, Alan Stearns
no flags
Patch (25.33 KB, patch)
2013-09-06 11:41 PDT, Bem Jones-Bey
no flags
Bem Jones-Bey
Comment 1 2013-09-06 11:41:09 PDT
Bem Jones-Bey
Comment 2 2013-09-06 11:43:48 PDT
(In reply to comment #0) > Created an attachment (id=206283) [details] > reftest > > If you have a left float followed by inline content, and the inline content overlaps the float, the inline content should paint on top. If you add a shape-outside to the float, the float paints on top. Thanks. I didn't end up using your ref test because it uses clip-path, which causes the float to be it's own layer and thus paint on top, so I wrote a slightly different test.
WebKit Commit Bot
Comment 3 2013-09-06 23:04:24 PDT
Comment on attachment 210776 [details] Patch Clearing flags on attachment: 210776 Committed r155244: <http://trac.webkit.org/changeset/155244>
WebKit Commit Bot
Comment 4 2013-09-06 23:04:26 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.